# stock-exchange-simulation

./: Cargo.toml  LICENSE  README.md  build.rs
config/: investor_list.json  stock_list.json
investor_instructions/: alice.json  bob.json
proto/: stock_exchange.proto
src/: lib.rs  portal.rs  server.rs  types.rs  utils.rs
src/portal/: account.rs  account_manager.rs  event_history.rs  order_info.rs  orderbook.rs  orderbook_manager.rs  stock_manager.rs  utils.rs
src/types/: account_manager.rs  common.rs  config.rs  event.rs  order.rs  orderbook.rs  portal.rs
